--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@testing-library/user-event": "^14.4.3",
     "gh-pages": "^4.0.0",
+    "msw": "^0.49.2",
     "prop-types": "^15.8.1",
     "redux-logger": "^3.0.6"
   }
